[gd_scene load_steps=12 format=3 uid="uid://bk7jcuqx6es1g"]

[ext_resource type="Texture2D" uid="uid://7swtvjrqm2xj" path="res://Assets/Enemies/penguin.png" id="1_c3lfe"]
[ext_resource type="Script" uid="uid://vshvn54m762h" path="res://Scripts/enemy_penguin.gd" id="1_e0rqs"]
[ext_resource type="AudioStream" uid="uid://yv0ttb5qaqau" path="res://MusicAndSounds/SFX/walking_3.ogg" id="3_3dhal"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dhal"]
size = Vector2(17, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e0rqs"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_3dhal"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_e0rqs"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v8y5j"]
_data = {
&"RESET": SubResource("Animation_3dhal"),
&"run": SubResource("Animation_e0rqs")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_v8y5j"]
radius = 172.743

[sub_resource type="CircleShape2D" id="CircleShape2D_04bpu"]
radius = 97.0824

[sub_resource type="CircleShape2D" id="CircleShape2D_wxi0p"]
radius = 39.0128

[node name="EnemyPenguin" type="CharacterBody2D"]
script = ExtResource("1_e0rqs")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -9)
texture = ExtResource("1_c3lfe")
flip_h = true
hframes = 4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, -0.5)
shape = SubResource("RectangleShape2D_3dhal")

[node name="WallDetection" type="RayCast2D" parent="."]
rotation = 1.5708
target_position = Vector2(3.25799e-05, 9)
collision_mask = 4
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_e0rqs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v8y5j")
}

[node name="Moving" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3dhal")

[node name="LowVolumeSound" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowVolumeSound"]
shape = SubResource("CircleShape2D_v8y5j")

[node name="MediumVolumeSound" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MediumVolumeSound"]
shape = SubResource("CircleShape2D_04bpu")

[node name="FullVolumeSound" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullVolumeSound"]
shape = SubResource("CircleShape2D_wxi0p")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="LowVolumeSound" to="." method="_on_low_volume_sound_body_entered"]
[connection signal="body_exited" from="LowVolumeSound" to="." method="_on_low_volume_sound_body_exited"]
[connection signal="body_entered" from="MediumVolumeSound" to="." method="_on_medium_volume_sound_body_entered"]
[connection signal="body_exited" from="MediumVolumeSound" to="." method="_on_medium_volume_sound_body_exited"]
[connection signal="body_entered" from="FullVolumeSound" to="." method="_on_full_volume_sound_body_entered"]
[connection signal="body_exited" from="FullVolumeSound" to="." method="_on_full_volume_sound_body_exited"]
